--- a/note/css/obsidian.css
+++ b/note/css/obsidian.css
@@ -2750,6 +2750,9 @@ h1.title {
   list-style: none;
   margin: 5px 0;
 }
+.content ul li ul {
+  margin-left: 1em;
+}
 .content ul li:before {
   content: "•";
   margin: 0 1rem 0 0;
