--- a/cdn/bootstrap/util.css
+++ b/cdn/bootstrap/util.css
@@ -1,3 +1,16 @@
+
+.visible {
+    visibility: visible !important
+}
+
+.invisible {
+    visibility: hidden !important
+}
+
+
+/**
+间距相关
+ */
 .m-0 {
     margin: 0 !important;
 }
