--- a/css/util.css
+++ b/css/util.css
@@ -1,3 +1,7 @@
+body{
+    overflow: hidden;
+}
+
 .wyd-border {
     border: 1px solid darkgrey;
 }
@@ -807,4 +811,8 @@ body {
 
 .text-center {
     text-align: center !important;
+}
+
+.text-nowrap {
+    white-space: nowrap !important
 }
