--- a/css/wyd2021.css
+++ b/css/wyd2021.css
@@ -25,8 +25,12 @@
 @media (min-width: 576px) {
     .wyd-bottom-menu > .item {
         margin-left: 1rem;
-        display: flex!important;
+        display: flex !important;
         align-items: center;
     }
+}
+
+.wyd-bottom-menu {
+    max-height: 50vh !important;
 }
 
