--- a/templates/react.html
+++ b/templates/react.html
@@ -9,9 +9,9 @@
 
 <div id="root"></div>
 
-<script src="../react/react.production.min.js"></script>
-<script src="../react/react-dom.production.min.js"></script>
-<script src="../react/babel.min.js"></script>
+<script src="../cdn/react/react.production.min.js"></script>
+<script src="../cdn/react/react-dom.production.min.js"></script>
+<script src="../cdn/react/babel.min.js"></script>
 
 <script type="text/babel">
 
