--- a/templates/vue-router.html
+++ b/templates/vue-router.html
@@ -21,8 +21,8 @@
     <router-view></router-view>
 </div>
 
-<script src="../vue/vue.min.js"></script>
-<script src="../vue/vue-router.js"></script>
+<script src="../cdn/vue/vue.min.js"></script>
+<script src="../cdn/vue/vue-router.js"></script>
 
 <script>
 
