--- a/templates/vue.html
+++ b/templates/vue.html
@@ -11,7 +11,7 @@
     <h2>{{title}}</h2>
 </div>
 
-<script src="../vue/vue.min.js"></script>
+<script src="../cdn/vue/vue.min.js"></script>
 
 <script>
 
